results/print-ir/expected/failure/parser/unclosed_paren.psy.out
error: syntax error, unexpected {, expecting )
  --> tests/failure/parser/unclosed_paren.psy:1:11
   |
  1| if (true {
   |           ^--- Here

